--- a/css/Martin.css
+++ b/css/Martin.css
@@ -23,11 +23,16 @@ td {
 	height: 200px;
 }
 
-.TEST {
+.Titel {
 	font-family: "Courier New", Times, serif;
-	color: #ff6699;
+	color: darkblue;
 	text-align: center;
-	text-decoration: underline;
+	text-shadow: 2px 2px black;
+	outline-width: 10px;
+	outline-style: outset;
+	outline-color: #003399;
+	background-color: lightblue;
+
 }
 
 /* h3 {
@@ -53,10 +58,10 @@ iframe {
 }
 
 
-.grid-container {
+/*.grid-container {
 	display: grid;
 	grid-row-gap: 50px;
-	grid-column-gap: 50px
+	grid-column-gap: 50px*/
 }
 
 .header {
@@ -203,3 +208,11 @@ margin-left: 25%;
 .Pröjsa:hover{
 	transform: scale(1.1);
 }
+
+.sec1, .sec2, .sec3  {
+	display: grid;
+	grid-template-columns:repeat(3, 1fr);
+	grid-auto-rows: 50px;
+	float: left;
+	width: 33.3%;
+	grid-column-gap: 100px;
