--- a/css/Martin.css
+++ b/css/Martin.css
@@ -23,7 +23,17 @@ td {
 	height: 200px;
 }
 
-.Titel {
+.top {
+	text-align: center;
+	color: white;
+	background-color: #006699;
+	border-color: #003366;
+	border-width: 10px;
+	border-radius: 50px;
+	border-style: outset;
+}
+
+#Titel {
 	font-family: "Courier New", Times, serif;
 	color: darkblue;
 	text-align: center;
@@ -45,17 +55,6 @@ td {
 }
 */
 
-#SKOLAN {
-	position: relative;
-	left: 50%;
-	transform: translate(-50%, 0);
-}
-
-iframe {
-	position: relative;
-	left: 50%;
-	transform: translate(-50%, 0);
-}
 
 
 /*.grid-container {
@@ -86,6 +85,9 @@ iframe {
 	text-align: center;
 	background-color: white;
 	font-size: 20px;
+	outline-style: solid;
+	outline-color: black;
+	outline-width: 5px;
 }
 @media screen and (max-width: 700px) {
 	.left, .right, .middle {
@@ -105,49 +107,10 @@ iframe {
 }
 
 .FiskText {
-	background-color: white;
-	outline-style: ridge;
-	outline-color: grey;
-	outline-width: 10px;
-}
-
-.column1, .column2, .column3  {
-	display: grid;
-	grid-template-columns:repeat(3, 1fr);
-	grid-auto-rows: 50px;
-	float: left;
-	width: 33.3%;
-	grid-column-gap: 100px;
-}
-
-.row {
- text-align: center;
-}
-
-.nav {
- display: grid;
- float: left;
-}
-
-.column1 {
-	font-family: "Courier New", Times, serif;
-	background-color: #6666ff;
-	outline-style: outset;
-	outline-color: #3333cc;
-}
-
-.column3 {
-	font-family: "Courier New", Times, serif;
-	background-color: #33ccff;
-	outline-style: outset;
-	outline-color: #0099ff;
-}
-
-.column2 {
-	font-family: "Courier New", Times, serif;
 	background-color: #6699ff;
-	outline-style: outset;
-	outline-color: #3366ff
+	outline-style: solid;
+	outline-color: #6666ff;;
+	outline-width: 5px;
 }
 
 .Pröjsa {
@@ -162,39 +125,8 @@ iframe {
 
 
 
-.row {
- text-align: center;
-}
-
-.nav {
- display: grid;
- float: left;
-}
-
-.column1 {
-	font-family: "Courier New", Times, serif;
-	background-color: #6666ff;
-	outline-style: outset;
-	outline-color: #3333cc;
-}
-
-.column3 {
-	font-family: "Courier New", Times, serif;
-	background-color: #33ccff;
-	outline-style: outset;
-	outline-color: #0099ff;
-}
-
-.column2 {
-	font-family: "Courier New", Times, serif;
-	background-color: #6699ff;
-	outline-style: outset;
-	outline-color: #3366ff
-}
-
 .Pröjsa {
-margin-left: 25%;
-
+	margin-left: 25%;
 	text-align: center;
 	color: white;
 	background-color: #006699;
@@ -216,3 +148,28 @@ margin-left: 25%;
 	float: left;
 	width: 33.3%;
 	grid-column-gap: 100px;
+}
+
+	input[type=text], select, textarea {
+	  width: 100%;
+	  padding: 12px;
+	  border: 1px solid #ccc;
+	  border-radius: 4px;
+	  box-sizing: border-box;
+	  margin-top: 6px;
+	  margin-bottom: 16px;
+	  resize: vertical
+	}
+
+	input[type=submit] {
+	  background-color: #4CAF50;
+	  color: white;
+	  padding: 12px 20px;
+	  border: none;
+	  border-radius: 4px;
+	  cursor: pointer;
+	}
+
+	input[type=submit]:hover {
+	  background-color: #45a049;
+	}
